# intro-to-django-workshop-2023-06-17

./: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
blog/: models.py  serializers.py  urls.py  views.py
boiler_plate/: asgi.py  settings.py  urls.py  wsgi.py
postgres/: Dockerfile
